chg: [introduction] add PSS

--- a/1-ail-introduction/ail-training.tex
+++ b/1-ail-introduction/ail-training.tex
@@ -1271,6 +1271,14 @@ replies, etc.
 \end{frame}
 
 
+\begin{frame}
+    \frametitle{Private Search Set (PSS)}
+    \begin{center}
+        \includegraphics[scale=0.27]{images/pss-overview.png}
+    \end{center}
+\end{frame}
+
+
 \section{Annexes}
 
 
