chg: [ail-training CTI process] updated

--- a/2-ail-cti-use-cases/ail-training.tex
+++ b/2-ail-cti-use-cases/ail-training.tex
@@ -153,12 +153,12 @@
 \end{frame}
 
 \begin{frame}
-   \frametitle{Background}
-\begin{itemize}
-    \item Over the past five years, we have developed the AIL project\footnote{\url{https://www.ail-project.org/}} to fulfill our needs at CIRCL in intelligence gathering and analysis.
-    \item As AIL gained popularity, an increasing number of users began integrating it into their {\bf threat intelligence processes and workflows}.
-    \item In this presentation, we outline some of the processes where AIL can serve as a valuable tool, {\bf facilitating and enhancing the work of intelligence analysts}.
-\end{itemize}
+    \frametitle{Background}
+    \begin{itemize}
+        \item Over the past five years, we have developed the AIL project\footnote{\url{https://www.ail-project.org/}} to meet the intelligence gathering and analysis needs at CIRCL.
+        \item As AIL gained popularity, an increasing number of users have integrated it into their {\bf threat intelligence processes and workflows}.
+        \item In this presentation, we will outline several processes where AIL can be a valuable tool, {\bf facilitating and enhancing the work of intelligence analysts}\footnote{Including those working in SOCs, CSIRTs, or any organizations dealing with threat intelligence.}.
+    \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -363,7 +363,7 @@
         \item AIL project \url{https://github.com/ail-project} ({\bf all components including feeders and crawler infrastructure}).
         \item AIL framework \url{https://github.com/ail-project/ail-framework} ({\bf analysis framework}).
         \item Training materials and slide deck \url{https://github.com/ail-project/ail-training}.
-        \item Co-funded by European Union under joint threat analysis network (JTAN) project.
+        \item Co-funded by European Union under joint threat analysis network (JTAN) project and MISP-LEA.
     \end{itemize}
     \begin{figure}
         \includegraphics[scale=0.10, angle=0]{images/ail-project.png}
